--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ HASH_ALGO: md5 # algorithm to compute the content hash of the uploaded file
 JWT_SECRET: # JWT secret for authentication
 ALLOWED_CORS_ORIGINS: "http://localhost:3000" # a comma separated list of allowed origins
 MIME_MAPPING: { "png": "image/png", "jpg": "image/jpeg", "jpeg": "image/jpeg" }
+
+# S3 configuration
+AWS_REGION:
+S3_BUCKET_NAME:
+AWS_ACCESS_KEY_ID:
+AWS_SECRET_ACCESS_KEY:
