Make upload roles configurable

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,15 @@
-UPLOAD_DIR: uploads/ # location to keep uploaded files; default: <currentDir>/uploads
 PORT: 5000
-HASH_ALGO: md5 # algorithm to compute the content hash of the uploaded file
-JWT_SECRET: # JWT secret for authentication
-ALLOWED_CORS_ORIGINS: "http://localhost:3000" # a comma separated list of allowed origins
+STORAGE_SERVICE: s3 # Default: local file system
+
+UPLOAD_DIR: uploads/ # location to keep uploaded files; default: <currentDir>/uploads
 MIME_MAPPING: { "png": "image/png", "jpg": "image/jpeg", "jpeg": "image/jpeg" }
+HASH_ALGO: md5 # algorithm to compute the content hash of the uploaded file
+
+ALLOWED_CORS_ORIGINS: "http://localhost:3000" # a comma separated list of allowed origins
+
+# Authentication/Authorization
+JWT_SECRET: # JWT secret for authentication
+UPLOAD_ROLES: # A comma separated list of roles allowed to upload a file
 
 # S3 configuration
 AWS_REGION:
