--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "multer": "^1.4.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.3",
-    "@types/multer": "^1.4.7",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@flydotio/dockerfile": "^0.3.3",
     "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.3",
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "typescript": "^4.6.2"
   }
 }
